# ucminfcpp

./: .Rbuildignore  .Rhistory  .gitignore  404.html  CMakeLists.txt  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: RcppExports.R  ucminf.R  ucminf_xptr.R
articles/: cpp_use.html  cpp_use.md  index.html  index.md  introduccion.html  introduccion.md  julia_manual.html  julia_manual.md  portability_from_fortran.html  portability_from_fortran.md  python_manual.html  python_manual.md  ucminf_features.html  ucminf_features.md
cmake/: ucminfConfig.cmake.in
inst/: WORDLIST
inst/benchmarks/: bench_r_vs_cpp.R
inst/examples/: rosenbrock_xptr.cpp
inst/include/: ucminf_core.hpp  ucminf_core_impl.hpp
julia/: CMakeLists.txt  Project.toml  README.md  ucminf_julia.cpp
julia/src/: Ucminfcpp.jl
julia/test/: runtests.jl
man/: print.ucminf.Rd  ucminf.Rd  ucminf_control.Rd  ucminf_cpp.Rd  ucminf_fdf_cpp.Rd  ucminf_xptr.Rd  ucminf_xptr_cpp.Rd
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py  test_ucminf.py  ucminf_pybind.cpp
reference/: index.html  index.md  print.ucminf.html  print.ucminf.md  ucminf.html  ucminf.md  ucminf_control.html  ucminf_control.md  ucminf_cpp.html  ucminf_cpp.md  ucminf_fdf_cpp.html  ucminf_fdf_cpp.md  ucminf_xptr.html  ucminf_xptr.md  ucminf_xptr_cpp.html  ucminf_xptr_cpp.md
src/: Makevars  Makevars.win  RcppExports.cpp  ucminf_core.c  ucminf_core.cpp  ucminf_core.h  ucminf_core.hpp  ucminf_rcpp.cpp
tests/: testthat.R
tests/cpp/: CMakeLists.txt  test_ucminf.cpp
tests/testthat/: test-fdfun-interface.R  test-performance-regression.R  test-ucminf-control.R  test-ucminf.R  test-xptr.R
vignettes/: cpp_use.Rmd  introduccion.Rmd  julia_manual.Rmd  portability_from_fortran.Rmd  python_manual.Rmd  ucminf_features.Rmd
